# betterpoll

./: .env.example  .gitignore  200.html  404.html  CNAME  Cargo.toml  LICENSE  README.md  Rocket.example.toml  index.html  package.json  schema.sql  tsconfig.json
.github/workflows/: backend.yml  ci.yml  deploy.yml  frontend.yml
_nuxt/: 058a2b3.js  0f054a8.js  134edb1.js  154a163.js  15eac7f.js  16d5dad.js  17210e3.js  173351a.js  194b016.js  1989108.js  1a46d41.js  1b18b53.js  25639dd.js  2b4495f.js  2e650f3.js  307c864.js  3160129.js  3a3f07c.js  3a80711.js  3b5fe25.js  3dd3c98.js  3f1a240.js  3fc80d2.js  4334933.js  46ef930.js  4914717.js  4c4315e.js  5473738.js  5845a5c.js  58e5f77.js  5aad5c2.js  60d41ea.js  61f2509.js  6200268.js  63a0c49.js  69f34d8.js  6a83957.js  6ffe1c9.js  753c654.js  76fbf37.js  (+36 more)
about/: index.html
backend/: Cargo.toml  schema.sql
backend/src/: api.rs  main.rs  poll.rs
backend/src/database/: mod.rs  postgres.rs
backend_lib/: Cargo.toml
backend_lib/fuzz/: Cargo.toml
backend_lib/src/: api.rs  error.rs  lib.rs  poll.rs
css/: main.css
faq/: index.html
frontend/: .eslintrc.js  README.md  constants.ts  dynamic-routes.ts  nuxt.config.js  package-lock.json  package.json  tsconfig.json
frontend/.github/: dependabot.yml
frontend/components/: CSSTemplate.vue  NavigationMenu.vue  PollCreateButton.vue  StatusBox.vue  Tutorial.vue
frontend/middleware/: dynamic-routes.ts
frontend/pages/: about.vue  contact.vue  faq.vue  (+3 more)
new/: index.html
server_binary/: Cargo.toml
src/: api.rs  error.rs  index.ts  main.rs  poll.rs
status/: index.html
tests/: example.ts
(+105 files in other folders)
