[package]
name = "betterpoll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
dotenv = "0.15.0"
postgres = "0.19.2"
rand = "0.8.4"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_cors = "0.6.0-alpha1"
serde = "1.0.132"
tallystick = "0.4.3"
backtrace = "0.3.63"
arbitrary = "1.0.3"
rocket-governor = { version = "0.1.0-rc.3", features = ["limit_info", "logger"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["postgres_pool"]

[features]
no-db-test = []

[dev-dependencies]
serial_test = "0.5.1"
